
option java_outer_classname="GetServerMappingCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetServerMappingCommand {
	optional int64 requestId = 1;
}